--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,1 +1,11 @@
-/*# sourceMappingURL=index.css.map */
+@import '@fontsource/roboto/300.css';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}/*# sourceMappingURL=index.css.map */
