--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,16 @@
 @import '@fontsource/roboto/300.css';
+@import './variables';
+@mixin card{
+        background-color: $secondaryBackground;
+        border-radius: 8px;
+        height: 4.5rem;
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        padding: 0.5rem;
+        padding-left: 1rem;
+        margin: 0.8rem;
+}
 
 *{
     margin: 0;
@@ -10,3 +22,106 @@ body{
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
+.app{
+  background-color: $primaryBackground;
+  color: $primaryText;
+  height: auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+  transition: all .5s;
+
+  .heading{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+
+    h1{
+    font-size: 3rem;
+    }
+    .input-container{
+        @include card;
+
+        button{
+            border: none;
+            background-color: $accent;
+            padding: 1.5rem 1.5rem;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            &:hover, &:active{
+                background-color:  $darkenAccent;
+            }
+        }
+
+        input[type=text]{
+            outline: none;
+            border: none;
+            background: none;
+            color: $primaryText;
+            font-size: 1.2rem;
+            padding: 0.5rem 0.2rem;
+            width: 80%;
+
+            &::placeholder{
+                color: $primaryText;
+                opacity: 0.5;
+            }
+        }
+    }
+  }
+  
+}
+
+.tasks-list{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+.task-element{
+    @include card;
+    background-color: $secondaryBackgroundDarken;
+    width: 100%;
+    align-items: center;
+    box-shadow: none;
+
+    h2{
+        padding-left: 1rem;
+        font-size: 1rem;
+
+    }
+    button{
+        background: none;
+        border: none;
+        padding: 0.8rem;
+        margin: 0.5rem;
+        .icon{
+            color: #fff;
+            &:hover{
+                color: $accent;
+                cursor: pointer;
+            }
+        }
+    }
+}
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+}
+
+.hide{
+    display: none;
+}
+
+
