--- a/src/styles/taskItem.css
+++ b/src/styles/taskItem.css
@@ -1,1 +1,37 @@
-/*# sourceMappingURL=taskItem.css.map */
+@import '@fontsource/roboto/300.css';
+.task-element {
+  border-radius: 8px;
+  height: 4.5rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  margin: 0.8rem;
+  background-color: #085c5c;
+  width: 100%;
+  align-items: center;
+}
+.task-element h2 {
+  padding-left: 1rem;
+  font-size: 1rem;
+}
+.task-element button {
+  background: none;
+  border: none;
+  padding: 0.8rem;
+  margin: 0.5rem;
+}
+.task-element button .icon:hover {
+  color: #EDAA25;
+  cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  width: auto;
+}
+
+.hide {
+  display: none;
+}/*# sourceMappingURL=taskItem.css.map */
