--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
 * {
   margin: 0;
   padding: 0;
@@ -30,6 +31,7 @@ body {
 }
 .app .heading h1 {
   font-size: 3rem;
+  font-weight: 400;
 }
 .app .heading .input-container {
   background-color: #0A7373;
