--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
 @import './variables';
 
 *{
@@ -31,6 +32,7 @@ body{
 
     h1{
     font-size: 3rem;
+    font-weight: 400;
     }
     .input-container{
         background-color: $secondaryBackground;
