--- a/src/styles/taskItem.scss
+++ b/src/styles/taskItem.scss
@@ -1,5 +1,6 @@
 @import '../styles/variables';
 @import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/500.css';
 
 
 .task-element{
@@ -14,9 +15,23 @@
     width: 100%;
     align-items: center;
 
+    input{
+        outline: none;
+        border: 3px solid $secondaryBackground;
+        background: none;
+        border-radius: 8px;
+        padding: 0.5rem;
+        color: $primaryText;
+        font-size: 1rem;
+        padding-left: 0.8rem;
+        font-weight: 400;
+        font-family: 'Roboto', sans-serif;
+ 
+    }
     h2{
         padding-left: 1rem;
         font-size: 1rem;
+        font-weight: 400;
 
     }
     button{
