--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,3 @@
-@import '@fontsource/roboto/300.css';
-@import '@fontsource/roboto/400.css';
 * {
   margin: 0;
   padding: 0;
@@ -12,29 +10,28 @@ body {
 }
 
 .app {
-  background-color: #010221;
-  color: #f1f1f1;
-  height: auto;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  background-color: #0f0e17;
+  color: #fffffe;
+  height: auto;
+  min-height: 100vh;
+  justify-content: center;
   padding: 2rem 0;
-  transition: all 0.5s;
 }
 .app .heading {
   display: flex;
   flex-direction: column;
-  width: 100%;
   align-items: center;
+  width: 100%;
 }
 .app .heading h1 {
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-weight: 400;
 }
 .app .heading .input-container {
-  background-color: #0A7373;
+  background-color: #fffffe;
   border-radius: 8px;
   height: 4.5rem;
   width: 60%;
@@ -46,7 +43,7 @@ body {
 }
 .app .heading .input-container button {
   border: none;
-  background-color: #EDAA25;
+  background-color: #ff8906;
   padding: 1.5rem 1.5rem;
   border-radius: 8px;
   display: flex;
@@ -55,29 +52,29 @@ body {
   cursor: pointer;
 }
 .app .heading .input-container button:hover, .app .heading .input-container button:active {
-  background-color: #ed9625;
+  background-color: #f25f4c;
 }
 .app .heading .input-container input[type=text] {
   outline: none;
   border: none;
   background: none;
-  color: #f1f1f1;
+  color: #000;
   font-size: 1.2rem;
   padding: 0.5rem 0.2rem;
   width: 80%;
 }
 .app .heading .input-container input[type=text]::-moz-placeholder {
-  color: #f1f1f1;
+  color: #000;
   opacity: 0.5;
 }
 .app .heading .input-container input[type=text]::placeholder {
-  color: #f1f1f1;
+  color: #000;
   opacity: 0.5;
 }
 
 .tasks-list {
-  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 60%;
 }/*# sourceMappingURL=index.css.map */
