--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,3 @@
-@import '@fontsource/roboto/300.css';
-@import '@fontsource/roboto/400.css';
 @import './variables';
 
 *{
@@ -7,32 +5,26 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body{
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
 .app{
-  background-color: $primaryBackground;
-  color: $primaryText;
-  height: auto;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem 0;
-  transition: all .5s;
+    @include flex-column-center;
+    background-color: $primaryBackground;
+    color: $primaryText;
+    height: auto;
+    min-height: 100vh;
+    justify-content: center;
+    padding: 2rem 0;
 
-  .heading{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
+    .heading{
+        @include flex-column-center;
+        width: 100%;
 
     h1{
-    font-size: 3rem;
-    font-weight: 400;
+        font-size: 3.5rem;
+        font-weight: 400;
     }
     .input-container{
         background-color: $secondaryBackground;
@@ -44,6 +36,7 @@ body{
         padding: 0.5rem;
         padding-left: 1rem;
         margin: 0.8rem;
+
         button{
             border: none;
             background-color: $accent;
@@ -53,8 +46,9 @@ body{
             align-items: center;
             justify-content: center;
             cursor: pointer;
+
             &:hover, &:active{
-                background-color:  $darkenAccent;
+                background-color:  $secondaryAccent;
             }
         }
 
@@ -62,25 +56,22 @@ body{
             outline: none;
             border: none;
             background: none;
-            color: $primaryText;
+            color: $stroke;
             font-size: 1.2rem;
             padding: 0.5rem 0.2rem;
             width: 80%;
 
             &::placeholder{
-                color: $primaryText;
+                color: $stroke;
                 opacity: 0.5;
             }
         }
     }
   }
-  
 }
 .tasks-list{
+    @include flex-column-center;
     width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 
