--- a/src/styles/taskItem.css
+++ b/src/styles/taskItem.css
@@ -41,7 +41,6 @@
   font-size: 1rem;
   padding-left: 1rem;
   font-weight: 400;
-  width: 70%;
 }
 .task-element h2 {
   padding-left: 1rem;
@@ -63,4 +62,21 @@
 
 .hide {
   display: none;
+}
+
+.lined {
+  text-decoration: line-through;
+}
+
+.box {
+  display: flex;
+  align-items: center;
+  margin-left: 0.5rem;
+}
+
+input[type=checkbox] {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+  margin: 0.2rem;
 }/*# sourceMappingURL=taskItem.css.map */
